# deictic-gesture-recognition

./: .gitignore  prezentace.odp
LadaKudlackova_Thesis/thesis_code/: remote_start.sh
LadaKudlackova_Thesis/thesis_code/task_execution/: task_execution.launch
astra_calibration/: RGB_DEPTH_Calibration.odt  rgb_Astra_Orbbec.yaml
astra_ws/catkin_ws/: echo
code/main_pkg/: CMakeLists.txt  package.xml
code/main_pkg/src/: main_node.cpp
code/pcl_object_detection/include/: ObjectDetection.h  PointCloudPublishers.h  RVizMarkerBox.h
code/pcl_object_detection/launch/: pcl_object_detection.launch
code/pcl_object_detection/src/: ObjectDetection.cpp  ObjectsPublisher.cpp  PointCloudPublishers.cpp  RVizMarkerBox.cpp
code/pcl_object_detecton/: CMakeLists.txt  package.xml
code/pcl_object_detecton/include/: DetectedObjects.h  ObjectDetection.h  ObjectsPublisher.h  PointCloudPublishers.h  RVizMarkerBox.h
code/pcl_object_detecton/msg/: DetectedObjects.msg
code/pointing_gesture/: CMakeLists.txt  package.xml
code/pointing_gesture/include/: PointingGesture.h  RVizPublisher.h  Skeleton.h  TrackedPerson.h  TrackedSkeleton.h
code/pointing_gesture/msg/: PointingArmJoints.msg
code/pointing_gesture/src/: BodyTracker.h  PointingGesture.cpp  RVizLineMarker.cpp  RVizLineMarker.h  RVizPointMarker.cpp  RVizPointMarker.h  RVizPublisher.cpp  Skeleton.h  TrackedPerson.cpp  TrackedPerson.h  TrackedSkeleton.cpp  TrackedSkeleton.h  astra_body_tracker_node.cpp  pointing_gesture_node.cpp  test_timeout_node.cpp
code/ros_astra_camera/: astra_driver.cpp  astra_driver.h
code/task_control/: CMakeLists.txt  package.xml
code/urdf_rviz/: CMakeLists.txt  README.md
code_robot/: skript.odt
code_robot/URScripts/: testInverseKinematics.py  testInverseKinematics.txt  test_if.txt
code_robot/custom/: actual_tcp_pose.py  io_test.py  move_to_tcp_pose.py  test_ik.py
code_robot/navi_ws/: CMakeLists.txt  package.xml
code_robot/navi_ws/src/remote_commands/: CMakeLists.txt  package.xml  reach_for_object.py  remote_launch.sh  result.txt
code_robot/navi_ws/src/remote_commands/src/: remote_commands.cpp  simple_navigation_goal.cpp
code_robot/remote_ur/: test_play.py
code_robot/robot_arm_sequences/: CMakeLists.txt  lift_and_crouch.py  package.xml
code_robot/src/: ur_common.xacro
code_sensors/: hello.sh
code_sensors/pcl_object_detection/: CMakeLists.txt
code_sensors/pointing_gesture/: CMakeLists.txt
code_sensors/task_control/: CMakeLists.txt  package.xml  ssh_file_cat.sh
code_sensors/urdf_rviz/: package.xml
output/: 20230212_object_detection_output.txt  echo_body_tracker_msg.txt  output_bodies.txt
output/selection/: result.txt
papers/: Notes_2023  Notes_December_2022
papers/kinect/: ros_ubuntu_install_issues.txt
papers/neobotix/: impakt_2024_map.yaml  lidar.txt
papers/notes/: Notes_2023  Notes_December_2022  Ubuntu_ROS
papers/robot/: MoveIt_Gripper.odt  Net_Neobotix_Lenovo.odt  demo_gazebo_launch.terminal.log.odt
papers/thesis-en/: 01_task_description.tex  02_state_of_the_art.tex  03_hardware.tex  05_gesture_based_control.tex  thesis.tex
thesis_code/: remote_start.sh
thesis_code/pointing_gesture/: CMakeLists.txt
thesis_code/task_execution/: CMakeLists.txt
(+363 files in other folders)
