<?xml version="1.0"?>
<package format="2">
  <name>remote_commands</name>
  <version>0.0.0</version>
  <description>The remote_commands package</description>

  <maintainer email="ladak@todo.todo">ladak</maintainer>

  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/remote_commands</url> -->

<buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

 
  
  <!-- format 2 -->
  <!--build_export_depend>roscpp</build_export_depend-->
  <!--exec_depend>roscpp</exec_depend-->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
